# waylyrics

./: .gitignore  LICENSE  README.md  flake.nix  justfile  lib.hpp  meson.build  shell.nix  test.cpp  waylyrics.cpp
.github/workflows/: lib.yml
include/: graphics.hpp  lib.hpp
opengl/: opengl.cpp
shaders/: frag.glsl  vert.glsl  vertex_data
test/: test.cpp
waylyrics/: waylyrics.cpp
